--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+
+#bordeDelimitado1 {
+    padding: 15px;
+    border: 2px solid #092150;
+    border-radius: 16px;
+    background: #FFFFFF;
+    }
+
+.tituloCustom1 {
+    font-size: medium
+}
