tamo en la misma

--- a/src/app/componentes/educacion-individual/educacion-individual.component.html
+++ b/src/app/componentes/educacion-individual/educacion-individual.component.html
@@ -1,4 +1,4 @@
-<div class="educacion">
+<div class="educacion-individual">
     <h6>Nueva Educacion</h6>
     <p>{{educacionIndi.tituloEstablecimiento}}</p>
     <p>{{educacionIndi.lugar}}</p>
