--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <app-header></app-header>
 <br>
 <app-banner></app-banner>
@@ -9,3 +10,4 @@
 <app-educacion></app-educacion>
 <br>
 <app-skills></app-skills>
+</div>
