--- a/src/app/componentes/experienciaP/experienciaP.component.html
+++ b/src/app/componentes/experienciaP/experienciaP.component.html
@@ -1,6 +1,6 @@
 <div class="container"  >
     <div class="row" id="bordeDelimitado1">
         <H3>Experiencia</H3>
-        <app-experiencia-individual></app-experiencia-individual>
+        <app-experienciaH></app-experienciaH>
     </div>
 </div>
