--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,9 @@
 <br>
 <app-acerca-de></app-acerca-de>
 <br>
-<app-experiencia></app-experiencia>
+<app-experienciaP></app-experienciaP>
 <br>
-<app-educacion></app-educacion>
+<app-educacionP></app-educacionP>
 <br>
-<app-skills></app-skills>
+<app-skillsP></app-skillsP>
 </div>
