--- a/src/app/componentes/educacionH/educacionH.component.html
+++ b/src/app/componentes/educacionH/educacionH.component.html
@@ -1,4 +1,4 @@
-<div class="educacion-individual">
+<div class="educacionH">
     <h5>{{educacion.tituloEstablecimiento}}</h5>
     <h6>{{educacion.titulo}}</h6>
     <p id="fecha">{{educacion.fechaInicio | date:'shortDate'}} - {{educacion.fechaFinalizacion | date:'shortDate'}}</p>
