--- a/src/app/componentes/educacionP/educacionP.component.html
+++ b/src/app/componentes/educacionP/educacionP.component.html
@@ -1,7 +1,7 @@
 <div class="container"  >
     <div class="row" id="bordeDelimitado1">
         <H2>Educacion</H2>
-<div class="educacion">
+<div class="educacionP">
     <div *ngFor="let educaciones of educacion"> 
         <app-educacionH [educacion]="educaciones"> </app-educacionH>
 </div>
