--- a/src/app/componentes/skillsP/skillsP.component.html
+++ b/src/app/componentes/skillsP/skillsP.component.html
@@ -1,5 +1,5 @@
 <div class="container"  >
     <div class="row" id="bordeDelimitado1"><h3>Hard & Soft Skills</h3>
-        <app-skill-individual></app-skill-individual>
+        <app-skillsH></app-skillsH>
         </div>
 </div>
