--- a/src/app/componentes/experienciaP/experienciaP.component.html
+++ b/src/app/componentes/experienciaP/experienciaP.component.html
@@ -1,6 +1,10 @@
 <div class="container"  >
     <div class="row" id="bordeDelimitado1">
-        <H3>Experiencia</H3>
-        <app-experienciaH></app-experienciaH>
+        <H2>Experiencia</H2>
+<div class="experienciaP">
+    <div *ngFor="let experiencias of experiencia"> 
+        <app-experienciaH [experiencia]="experiencias"> </app-experienciaH>
+</div>
+</div>
     </div>
 </div>
