agregado el acerca de

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,17 @@
 <div class="container">
-<app-header></app-header>
-<br>
-<app-banner></app-banner>
-<br>
-<app-acerca-de></app-acerca-de>
-<br>
-<app-experienciaP></app-experienciaP>
-<br>
-<app-educacionP></app-educacionP>
-<br>
-<app-skillsP></app-skillsP>
-</div>
+    <br>
+    <app-header></app-header>
+    <br>
+    <app-banner></app-banner>
+    <br>
+    <app-acerca-de-p></app-acerca-de-p>
+    <br>
+    <app-experienciaP></app-experienciaP>
+    <br>
+    <app-educacionP></app-educacionP>
+    <br>
+    <app-skillsP></app-skillsP>
+    <br>
+    <app-proyectos-p></app-proyectos-p>
+    <br>
+    </div>
