--- a/src/app/componentes/experienciaH/experienciaH.component.html
+++ b/src/app/componentes/experienciaH/experienciaH.component.html
@@ -3,4 +3,5 @@
     <h6>{{experiencia.lugar}}</h6>
     <p id="fecha">{{experiencia.fechaInicio | date:'shortDate'}} - {{experiencia.fechaFinalizacion | date:'shortDate'}}</p>
     <p>{{experiencia.descripcion}}</p>
+</div>
     <hr>
