--- a/src/app/componentes/skillsH/skillsH.component.html
+++ b/src/app/componentes/skillsH/skillsH.component.html
@@ -1,2 +1,7 @@
-<p>cualquier poronga</p>
-<p></p>
+<br>
+<div class="skillsH">
+<div class="row">
+    <h5>{{skills.nombreSkill}}</h5>
+    <h6>{{skills.porcentaje}}</h6>
+</div>
+</div>
