--- a/src/app/componentes/banner/banner.component.html
+++ b/src/app/componentes/banner/banner.component.html
@@ -1,5 +1,5 @@
 <div class="container"  >
     <div class="row" id="bordeDelimitado1"><p>aca va el banner</p>
-<img src="sdfdsfds" alt="el banner">
+<img src="" alt="el banner">
     </div>
     </div>
