--- a/src/app/componentes/educacionH/educacionH.component.html
+++ b/src/app/componentes/educacionH/educacionH.component.html
@@ -1,5 +1,15 @@
 <div class="educacionH">
-    <h5>{{educacion.tituloEstablecimiento}}</h5>
-    <h6>{{educacion.titulo}}</h6>
-    <p id="fecha">{{educacion.fechaInicio | date:'shortDate'}} - {{educacion.fechaFinalizacion | date:'shortDate'}}</p>
+    <div class="row">
+        <div class="col-1">
+            <p> <img  src="{{educacion.logo}}"  alt="description" class="img-fluid" /></p>
+        </div>
+        <div class="col-11">
+            <h5>{{educacion.tituloEstablecimiento}}</h5>
+            <h6>{{educacion.titulo}}</h6>
+            <p id="fecha">{{educacion.fechaInicio | date:'shortDate'}} - {{educacion.fechaFinalizacion | date:'shortDate'}}</p>
+        </div>
+        
+    </div>
+    
+    
     <hr>
