pruebitas fallidas con Spring
pruebitas fallidas con Spring

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,4 +14,11 @@
     <br>
     <app-proyectos-p></app-proyectos-p>
     <br>
+    <app-prueba-spring></app-prueba-spring>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    
     </div>
