--- a/src/app/componentes/acerca-de-h/acerca-de-h.component.html
+++ b/src/app/componentes/acerca-de-h/acerca-de-h.component.html
@@ -1,4 +1,5 @@
 <div class="acerca-de">
-    <h6>{{acercaDe?.titulo}}</h6>
+    <h1>{{acercaDe?.nombre}}</h1>
+    <h4>{{acercaDe?.titulo}}</h4>
     <p>{{acercaDe?.descripcion}}</p>
 </div>
