--- a/src/app/componentes/experienciaH/experienciaH.component.html
+++ b/src/app/componentes/experienciaH/experienciaH.component.html
@@ -1,5 +1,5 @@
 <div class="experienciaH">
-    <h5>{{experiencia.tituloPuesto}}</h5>
+    <h5>{{experiencia.cargo}}</h5>
     <h6>{{experiencia.lugar}}</h6>
     <p id="fecha">{{experiencia.fechaInicio | date:'shortDate'}} - {{experiencia.fechaFinalizacion | date:'shortDate'}}</p>
     <p>{{experiencia.descripcion}}</p>
