el acerca-de anda

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <br>
     <app-banner></app-banner>
     <br>
-    <app-acerca-de-p></app-acerca-de-p>
+    <app-acerca-de-h></app-acerca-de-h>
     <br>
     <app-experienciaP></app-experienciaP>
     <br>
@@ -13,8 +13,6 @@
     <app-skillsP></app-skillsP>
     <br>
     <app-proyectos-p></app-proyectos-p>
-    <br>
-    <app-prueba-spring></app-prueba-spring>
     <br>
     <br>
     <br>
