--- a/src/app/componentes/acerca-de-h/acerca-de-h.component.html
+++ b/src/app/componentes/acerca-de-h/acerca-de-h.component.html
@@ -1,5 +1,8 @@
-<div class="acerca-de">
+<div class="container"  >
+    <div class="row" id="bordeDelimitado1"> 
+        <div class="acerca-de">
     <h1>{{acercaDe?.nombre}}</h1>
-    <h4>{{acercaDe?.titulo}}</h4>
-    <p>{{acercaDe?.descripcion}}</p>
+    <h4>{{acercaDe?.img}}</h4>
+    <p>{{acercaDe?.cargo}}</p>
 </div>
+
