--- a/src/app/componentes/educacionP/educacionP.component.html
+++ b/src/app/componentes/educacionP/educacionP.component.html
@@ -1,10 +1,12 @@
 <div class="container"  >
     <div class="row" id="bordeDelimitado1">
         <H2>Educacion</H2>
+        <span>
+            <button class="btn btn-success float-right">Agregar</button>
+        </span>
         <br>
         <br>
         <br>
 
 <div class="educacionP">
-    <div *ngFor="let educaciones of educacion"> 
-        <app-educacionH [educacion]="educaciones"> </app-educacionH>
+        <app-educacionH></app-educacionH>
