--- a/src/app/componentes/experienciaP/experienciaP.component.html
+++ b/src/app/componentes/experienciaP/experienciaP.component.html
@@ -1,6 +1,9 @@
 <div class="container"  >
     <div class="row" id="bordeDelimitado1">
         <H2>Experiencia</H2>
+        <span>
+            <button class="btn btn-success float-right">Agregar</button>
+        </span>
 <div class="container-fluid">
         <div class="experienciaP">
             <br>
