--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="col-10" >
-            <img src="https://hackatonap.com/wp-content/uploads/2021/07/ARGENTINA-PROGRAMA.jpg">
         </div>
-        <div class="col-6">  <p type="button" class="btn btn-success">Iniciar sesion</p>  
+        <div class="col-6" >
+            <p type="button" class="btn btn-success">Iniciar sesion</p>  
         </div>
     </nav>
 
