--- a/src/app/componentes/skillsP/skillsP.component.html
+++ b/src/app/componentes/skillsP/skillsP.component.html
@@ -1,12 +1,14 @@
 <div class="container"  >
     <div class="row" id="bordeDelimitado1">
         <H2>Skills</H2>
+        <span>
+            <button class="btn btn-success float-right">Agregar</button>
+        </span>
         <div class="container-fluid">
 <div class="skillsP">
-    <div *ngFor="let skill of skills"> 
+    <!---<div *ngFor="let skill of skill"> --->
         <app-skillsH [skills]="skill"> </app-skillsH>
 </div>
 </div>
     </div>
-</div>
 </div>
