--- a/src/app/componentes/acerca-de-h/acerca-de-h.component.html
+++ b/src/app/componentes/acerca-de-h/acerca-de-h.component.html
@@ -1,8 +1,14 @@
-<div class="container"  >
-    <div class="row" id="bordeDelimitado1"> 
+<div class="container">
+    <div class="row" id="bordeDelimitado1">
         <div class="acerca-de">
-    <h1>{{acercaDe?.nombre}}</h1>
-    <h4>{{acercaDe?.img}}</h4>
-    <p>{{acercaDe?.cargo}}</p>
+    <h1>{{acercaDe?.nombre}} {{acercaDe.apellido}}</h1>
+    <h4>{{acercaDe?.cargo}}</h4>
+    <p>{{acercaDe?.descripcion}}</p>
+</div>
+<div class="col-12">
+    <button class="btn btn-primary flot-right">Editar</button>
+</div>
+    </div>
+    
 </div>
 
