--- a/src/app/componentes/banner/banner.component.html
+++ b/src/app/componentes/banner/banner.component.html
@@ -1,5 +1,3 @@
-<div class="container"  >
-    <div class="row"><p>aca va el banner</p>
-<img src="" alt="el banner">
-    </div>
+<div class="container" id="banner-arg-programa"  >
+        <img style="width: 100%; height: 100px; object-fit: cover; "src= "https://www.argentina.gob.ar/sites/default/files/2021/07/2021_07_argentina-programa_jumbotron-1_1.jpg" alt="el banner"/>
     </div>
