--- a/src/app/componentes/proyectos-h/proyectos-h.component.html
+++ b/src/app/componentes/proyectos-h/proyectos-h.component.html
@@ -2,9 +2,13 @@
     <div class="row">
         <div class="col"></div>
 <div class="proyectoH">
-    <h5>{{proyecto.nombreProyecto}}</h5>
-    <p id="fecha">{{proyecto.fechaRealizacion | date:'shortDate'}}</p>
+    <h5>{{proyecto.nombre}}</h5>
+    <p id="fecha">{{proyecto.fecha | date:'shortDate'}}</p>
     <p>{{proyecto.descripcion}}</p>
+    <div class="col-12">
+        <button class="btn btn-primary flot-right">Editar</button>
+        <button class="btn btn-danger flot-right">Eliminar</button>
+        </div>
 </div>
 </div>
 </div>
