--- a/src/app/componentes/skillsH/skillsH.component.html
+++ b/src/app/componentes/skillsH/skillsH.component.html
@@ -1,7 +1,12 @@
 <br>
 <div class="skillsH">
 <div class="row">
-    <h5>{{skills.nombreSkill}}</h5>
+    <h5>{{skills.nombre}}</h5>
     <h6>{{skills.porcentaje}}</h6>
+    <div class="col-12">
+        <button class="btn btn-primary flot-right">Editar</button>
+        <button class="btn btn-danger flot-right">Eliminar</button>
+        </div>
+
 </div>
 </div>
