--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,10 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="col-10" >
+<nav class="container" id="header" >
+        <div class="col-md-10" id="redes" >
+            <a href="https://www.instagram.com/pablovede_/">
+            <button><i class="fa-brands fa-instagram-square"></i></button>
+            <a href="https://github.com/pablovede">
+                <button><i class="fa-brands fa-github"></i></button>
+                <a href="https://www.behance.net/pablovedelago">
+                    <button><i class="fa-brands fa-behance"></i></button>
+        </a>
+         </a>
+            </a>
         </div>
-        <div class="col-6" >
-            <p type="button" class="btn btn-success">Iniciar sesion</p>  
+        <div>
+            <p type="button" class="btn btn-success float-right">Iniciar sesion</p>  
         </div>
     </nav>
-
-    
     
