agregado el deploy + conexion a Heroku

--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -1,6 +1,6 @@
 <div class="container" id="main-container" >
     <div class="row" id="bordeDelimitado1">
-        <H2>Educacion</H2>
+        <H2>Educacionn</H2>
         <span>
             <button class="btn btn-success float-right" (click)="onOpenModal(null, 'agregar')">Agregar</button>
         </span>
